--- a/Principal.html
+++ b/Principal.html
@@ -11,7 +11,7 @@
 		<li> Ansible</li>
 		<li> Integracion Continua</li>
 		<li> Emeralda Flores</li>
-
+		<li> Cesar Gonzalez</li>
 	<ul>
 </body>
 <html>
