se agrego lista ordenada

--- a/Principal.html
+++ b/Principal.html
@@ -13,5 +13,13 @@
 		<li> Emeralda Flores</li>
 		<li> Cesar Gonzalez</li>
 	<ul>
+	<ol>
+		<li> Cesar</li>
+		<li> Fidel</li>
+		<li> Keylin</li>
+		<li> Raul</li>
+		<li> Emeralda Flores</li>
+		<li> Pedrina</li>
+	</ol>
 </body>
 <html>
