se agrego otra lista desordenada

--- a/Principal.html
+++ b/Principal.html
@@ -21,5 +21,11 @@
 		<li> Emeralda Flores</li>
 		<li> Pedrina</li>
 	</ol>
+	<ul>
+		<li> Goku</li>
+		<li> Naruto</li>
+		<li> Porta</li>
+		<li> Imagine Dragons</li>
+	<ul>
 </body>
 <html>
