--- a/Principal.html
+++ b/Principal.html
@@ -2,7 +2,7 @@
 <html lang ="en">
 <head>
 	<meta charset ="utf=8">
-	<title> Curso de altura</titel>
+	<title> Titulos </titel>
 </head>
 <body>
 	<ul>
