se agrego una nueva lista

--- a/Principal.html
+++ b/Principal.html
@@ -21,5 +21,13 @@
 		<li> Emeralda Flores</li>
 		<li> Pedrina</li>
 	</ol>
+	<ul>
+		<li> Naruto</li>
+		<li> Goku</li>
+		<li> Pegazo</li>
+		<li> Ben10</li>
+		<li> Pokemon</li>
+
+	<ul>
 </body>
 <html>
